# GlobeCrochetPattern

./: .gitignore  README.md  main.py  pattern.py  pyproject.toml  qgisdatei.qgz
Backend/: Dockerfile  main.py  pattern.py  plot.ipynb  server.py
Data/: plot.ipynb
Dokumentation/: documentation.tex  mypckg2.sty
Frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  api.js  main.jsx
