[project]
name = "globecrochetpattern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cesiumpy>=0.3.3",
    "fastapi>=0.121.3",
    "flask>=3.1.2",
    "glob2>=0.7",
    "ipyleaflet>=0.20.0",
    "ipyopenlayers>=0.2.1",
    "notebook>=7.4.7",
    "numba>=0.62.1",
    "rioxarray>=0.19.0",
    "uvicorn[standard]>=0.38.0",
    "xarray>=2025.9.1",
]
